Fix the issue where nav is always on top, even when not visible, items are now clickable

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -130,7 +130,7 @@ header {
 
 nav {
     position: fixed;
-    z-index: 1;
+    z-index: -1;
     overflow: hidden;
     background: none;
     display: flex;
@@ -139,6 +139,7 @@ nav {
     width: 100vw;
     height: 100vh;
     transition: background-color 0.5s ease-in-out;
+    user-select: none;
 }
 
 nav:before, nav:after {
